--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 bin/
 gen/
 out/
+build/
+captures/
 
 # Gradle files
 .gradle/
@@ -34,7 +36,9 @@ captures/
 
 # IntelliJ
 *.iml
+.externalNativeBuild
 .idea/workspace.xml
+.idea/modules.xml
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
@@ -63,3 +67,7 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+
+# Mac OS X
+.DS_Store
