--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,8 @@
   ~
   -->
 
-<manifest
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	package="exposed.tracking.facebook.android"
-	>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	package="exposed.tracking.facebook.android">
 
 	<application
 		android:allowBackup="true"
@@ -28,12 +26,14 @@
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/AppTheme"
-		>
+		android:theme="@style/AppTheme">
 		<service android:name=".FacebookScrapingService">
 			<intent-filter>
 				<action android:name="android.accessibilityservice.AccessibilityService" />
 			</intent-filter>
+			<meta-data
+				android:name="android.accessibilityservice"
+				android:resource="@xml/serviceconfig" />
 		</service>
 	</application>
 </manifest>
